<resources>
    <string name="app_name">MyListViewWithSqliteDatabaseDemo10</string>
    <string name="enter_your_name">Enter Your Name :</string>
    <string name="enter_your_id">Enter Your ID :</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="show">Show</string>
    <string name="save">Save</string>
    <string name="hello_world">Hello World</string>
</resources>